--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/s3-request-presigner": "^3.901.0",
     "@clerk/nextjs": "^6.33.1",
     "@neondatabase/serverless": "^1.0.2",
     "dotenv": "^17.2.3",
