--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.5",
+    "file-type": "^18.7.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
