--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@aws-sdk/s3-request-presigner": "^3.901.0",
     "@clerk/nextjs": "^6.33.1",
     "@google/generative-ai": "^0.24.1",
+    "@upstash/ratelimit": "^1.2.1",
+    "@upstash/redis": "^1.34.7",
     "@neondatabase/serverless": "^1.0.2",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
